Fix: spacing and text-breaking (#5355)
Fix #5244

(cherry picked from commit 750948a729d4ea5e092dba761f55b2ccc0a43834)

--- a/public/css/icinga/layout.less
+++ b/public/css/icinga/layout.less
@@ -330,7 +330,8 @@
       padding-left: .75em;
     }
 
-    .nav-level-1 > .nav-item i {
+    .nav-level-1 > .nav-item > a > i,
+    .nav-level-1 > .nav-item > span > i {
       font-size: 1.5em;
       margin-right: .5em;
     }
